kubectl/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baremetalweb
  labels:
    app.kubernetes.io/part-of: baremetalweb
