kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baremetalweb
  namespace: baremetalweb
  labels:
    app.kubernetes.io/name: baremetalweb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "4"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: baremetalweb
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
